--- a/webserver/templates/qrcode.html
+++ b/webserver/templates/qrcode.html
@@ -189,7 +189,7 @@
           if (data.success) {
             showModal('Leverans verifierad', 'Leveransen är genomförd!');
           } else {
-            showModal('Fel', 'Ogiltig QR-kod för denna order.');
+            showModal('Fel', 'Ogiltig QR-kod, problem rapporterat');
             output.textContent = "";
           }
         })
